fix bug with overflow on mobile version

--- a/src/features/SearchProduct/ui/SearchDropdown/SearchDropdown.module.scss
+++ b/src/features/SearchProduct/ui/SearchDropdown/SearchDropdown.module.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: fit-content;
     min-height: 200px;
-    max-height: 60vh;
+    max-height: 30vh;
     position: absolute;
     top: 50%;
     box-shadow: 0 0 10px 0 rgba(0 0 0 / 20%);
@@ -47,5 +47,17 @@
 
     &:hover {
         background: var(--color-light-gray);
+    }
+}
+
+@media (min-width: 769px) {
+    .wrapper {
+        max-height: 50vh;
+    }
+}
+
+@media (min-width: 1200px) {
+    .wrapper {
+        max-height: 60vh;
     }
 }
